<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="get_new_post">Click to get new posts</string>
    <string name="remove">Remove photo</string>
    <string name="loaded_photo">Loaded photo</string>
    <string name="go_back">Back</string>
    <string name="singOut">singOut</string>
    <string name="singIn">singIn</string>
    <string name="singUp">singUp</string>
    <string name="authorise">Enter your login</string>
    <string name="passWord">Enter your password</string>
    <string name="enter">Enter</string>
    <string name="APIerror">Api error. Try one more time</string>
    <string name="error"> Error. Try one more time</string>
    <string name="Authorization"> Authorixation completed</string>
    <string name="goOut">Are you sure to sing out?</string>
    <string name="exit">exit</string>
    <string name="stand">No</string>
    <string name="catch_error">Please update your app to receive new type of message</string>
    <string name="title_error">Error update</string>
    <string name="content_text_error">Please update your app</string>
    <string name="retry">retry</string>
</resources>